--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -201,7 +201,7 @@ h6 {
   color: #9e66af;
 }
 .nav-link, .nav-link:focus, .nav-link:visited {
-  color: #293821;
+  color: #a8a9b4;
 }
 .nav-link:hover {
   color: #9e66af;
